--- a/babylonProj/package.json
+++ b/babylonProj/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "testproj",
+  "name": "babylonproj",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "lighting02build": "tsc && vite build lighting02",
+    "lighting02preview": "vite preview lighting02 --host",
+    "rotationbuild": "tsc && vite build rotation",
+    "rotationpreview": "vite preview rotation --host",
+    "frames01build": "tsc && vite build frames01",
+    "frames01preview": "vite preview frames01 --host",
+    "shapes01build": "tsc && vite build shapes01",
+    "shapes01preview": "vite preview shapes01 --host",
+    "AWelement1build": "tsc && vite build AWelement1",
+    "AWelement1preview": "vite preview AWelement1 --host"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
