--- a/babylonProj/package.json
+++ b/babylonProj/package.json
@@ -18,11 +18,12 @@
     "AWelement1build": "tsc && vite build AWelement1",
     "AWelement1preview": "vite preview AWelement1 --host",
     "villagebuild": "tsc && vite build village",
-    "villagepreview": "vite preview village --host"
+    "collisionbuild": "vite build collision",
+    "collisionpreview": "vite preview collision --host"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^5.4.9",
-    "vite-plugin-chunk-split": "^0.5.0"
+    "vite-plugin-chunk-split": "^0.5.0" 
   }
 }
